tests/ui/coercion/coerce-issue-49593-box-never.nofallback.stderr
error[E0277]: the trait bound `(): std::error::Error` is not satisfied
  --> $DIR/coerce-issue-49593-box-never.rs:18:5
   |
LL |     Box::<_ /* ! */>::new(x)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::error::Error` is not implemented for `()`
   |
   = note: required for the cast from `Box<()>` to `Box<(dyn std::error::Error + 'static)>`

error[E0277]: the trait bound `(): std::error::Error` is not satisfied
  --> $DIR/coerce-issue-49593-box-never.rs:24:5
   |
LL |     raw_ptr_box::<_ /* ! */>(x)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::error::Error` is not implemented for `()`
   |
   = note: required for the cast from `*mut ()` to `*mut (dyn std::error::Error + 'static)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
